Divvied out main divs.

--- a/index.html
+++ b/index.html
@@ -1,40 +1,39 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="description" content="Engineers without Borders Carnegie Mellon" />
-        <meta name="keywords" content="Engineers Without Borders, Carnegie Mellon University, ewb, EWB, cmu, CMU, Energy India, Water Ecuador, Sustainability, Development, Developing Nations, Countries, World" />
-        <title>Engineers Without Borders | Carnegie Mellon</title>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-        <link media="screen" href="stylesheet.css" type="text/css" rel="stylesheet" />
-        <script type="text/javascript" src="javascript.js">
-        </script>
-    </head>
-    <body>
-        <a class="logo" href="index.html">
-            <img src="style/logo.png" alt="Engineers Without Borders" />
-        </a>
-        <ul class="nav">
-            <li>
-                <a href="#about">About Us</a>
-            </li>
-            <li>
-                <a href="#calendar">Calendar</a>
-            </li>
-            <li>
-                <a href="projects.html">Projects</a>
-            </li>
-            <li>
-                <a href="donate.html">Donate</a>
-            </li>
-            <li>
-                <a href="">Newsletters</a>
-            </li>
-            <li>
-                <a href="#whatsnew">What's New</a>
-            </li>
-        </ul>
-        <div id="content">
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="description" content="Engineers without Borders Carnegie Mellon" />
+    <meta name="keywords" content="Engineers Without Borders, Carnegie Mellon University, ewb, EWB, cmu, CMU, Energy India, Water Ecuador, Sustainability, Development, Developing Nations, Countries, World" />
+    <title>Engineers Without Borders | Carnegie Mellon</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <link media="screen" href="stylesheet.css" type="text/css" rel="stylesheet" />
+</head>
+<body>
+    <a class="logo" href="index.html">
+        <img src="style/logo.png" alt="Engineers Without Borders" />
+    </a>
+    <ul class="nav">
+        <li>
+        <a href="#about">About Us</a>
+        </li>
+        <li>
+        <a href="#calendar">Calendar</a>
+        </li>
+        <li>
+        <a href="projects.html">Projects</a>
+        </li>
+        <li>
+        <a href="donate.html">Donate</a>
+        </li>
+        <li>
+        <a href="">Newsletters</a>
+        </li>
+        <li>
+        <a href="#whatsnew">What's New</a>
+        </li>
+    </ul>
+    <div id="content">
+        <div id="home">
             <img src="images/home1.jpg">
             <img src="images/home3.jpg">
             <img src="images/home2.jpg">
@@ -51,14 +50,15 @@
                 <input type="submit" value="Log in via WebISO" name="login" />
             </form>
             <hr>
-            <div id="#about">
-                <h1 id="#about">About Us</h1>
-                <h2>Our Mission</h2>
-                <p> EWB-USA supports community-driven development programs worldwide by collaboratingwith local partners to design and implement sustainable engineering projects, while creatingtransformative experiences and responsible leaders.<br /> &nbsp;&nbsp;&nbsp;The Carnegie Mellon Chapter of EWB-USA is dedicated to understanding the challenges that face humanity today and implementing socially conscious and environmentally sustainable technologies to improve quality of life for local, national, and international communities.<br />
-                    <br />
-                </p>
-                <h2>Our History</h2>
-                <p> The Carnegie Mellon Chapter of Engineers Without Borders-USA was established in 2008, and has been growing strong ever since. One of the fastest growing engineering clubs on campus, we started as just a handful of students interested in similar things but now boast a chapter size of 70 active members. And we don't plan on slowing down. </p>
+        </div>
+        <div id="about">
+            <h1>About Us</h1>
+            <h2>Our Mission</h2>
+            <p> EWB-USA supports community-driven development programs worldwide by collaboratingwith local partners to design and implement sustainable engineering projects, while creatingtransformative experiences and responsible leaders.<br /> &nbsp;&nbsp;&nbsp;The Carnegie Mellon Chapter of EWB-USA is dedicated to understanding the challenges that face humanity today and implementing socially conscious and environmentally sustainable technologies to improve quality of life for local, national, and international communities.<br />
+                <br />
+            </p>
+            <h2>Our History</h2>
+            <p> The Carnegie Mellon Chapter of Engineers Without Borders-USA was established in 2008, and has been growing strong ever since. One of the fastest growing engineering clubs on campus, we started as just a handful of students interested in similar things but now boast a chapter size of 70 active members. And we don't plan on slowing down. </p>
             <h2>Current Board Members</h2>
             <table id="board">
                 <tr>
@@ -128,18 +128,23 @@
                 </tr>
             </table>
             <p>
-                <i>If you have any questions, comments or would like to <br />get in touch with EWB-CMU please feel free to email</i>
+                If you have any questions, comments or would like to get in touch with EWB-CMU please feel free to email
                 <a href="http://www.google.com/recaptcha/mailhide/d?k=01lKpJKaILpOZrkTkjszngBQ==&amp;c=GcAgJTL7Y9NE1y17aGzZ42x8RlktQO0-RfovKZblbGg=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501lKpJKaILpOZrkTkjszngBQ\75\75\46c\75GcAgJTL7Y9NE1y17aGzZ42x8RlktQO0-RfovKZblbGg\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">Sophie Grodsinsky</a>.</p>
         </div>
-        <div id="#calendar">
+        <div id="calendar">
             <h1>Calendar</h1>
             <iframe src="http://www.google.com/calendar/embed?mode=MONTH&amp;title=Engineers%20Without%20Borders-CMU&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23d9ceb4&amp;src=cmuewb%40gmail.com&amp;color=%23cfddde&amp;ctz=America%2FNew_York" style=" border-width:0 " width="720" height="600" frameborder="0">
             </iframe>
         </div>
-        <h1 id="#whatsnew">What's New</h1>
-        <iframe src="http://ewbcmu.tumblr.com/" width="800px" height="720px">
-        </iframe>
-        <footer>&copy;2015, Engineers Without Borders, Carnegie Mellon University Student Chapter</footer>
+        <div id="projects"></div>
+        <div id="donate"></div>
+        <div id="newletters"></div>
+        <div id="whatsnew">
+            <h1 id="whatsnew">What's New</h1>
+            <iframe src="http://ewbcmu.tumblr.com/" width="800px" height="720px">
+            </iframe>
         </div>
-    </body>
+    </div>
+    <footer>&copy;2015, Engineers Without Borders, Carnegie Mellon University Student Chapter</footer>
+</body>
 </html>
