Partially merged pages.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="projects.html">Projects</a>
         </li>
         <li>
-        <a href="donate.html">Donate</a>
+        <a href="#donate">Donate</a>
         </li>
         <li>
         <a href="">Newsletters</a>
@@ -127,18 +127,47 @@
                     </td>
                 </tr>
             </table>
-            <p>
-                If you have any questions, comments or would like to get in touch with EWB-CMU please feel free to email
-                <a href="http://www.google.com/recaptcha/mailhide/d?k=01lKpJKaILpOZrkTkjszngBQ==&amp;c=GcAgJTL7Y9NE1y17aGzZ42x8RlktQO0-RfovKZblbGg=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501lKpJKaILpOZrkTkjszngBQ\75\75\46c\75GcAgJTL7Y9NE1y17aGzZ42x8RlktQO0-RfovKZblbGg\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">Sophie Grodsinsky</a>.</p>
+            <p> If you have any questions, comments or would like to get in touch with EWB-CMU please feel free to email <a href="http://www.google.com/recaptcha/mailhide/d?k=01lKpJKaILpOZrkTkjszngBQ==&amp;c=GcAgJTL7Y9NE1y17aGzZ42x8RlktQO0-RfovKZblbGg=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501lKpJKaILpOZrkTkjszngBQ\75\75\46c\75GcAgJTL7Y9NE1y17aGzZ42x8RlktQO0-RfovKZblbGg\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">Sophie Grodsinsky</a>.</p>
         </div>
         <div id="calendar">
             <h1>Calendar</h1>
             <iframe src="http://www.google.com/calendar/embed?mode=MONTH&amp;title=Engineers%20Without%20Borders-CMU&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23d9ceb4&amp;src=cmuewb%40gmail.com&amp;color=%23cfddde&amp;ctz=America%2FNew_York" style=" border-width:0 " width="720" height="600" frameborder="0">
             </iframe>
         </div>
-        <div id="projects"></div>
-        <div id="donate"></div>
-        <div id="newletters"></div>
+        <div id="projects">
+        </div>
+        <div id="donate">
+            <h1>Donate</h1>
+            <div style="float: left; width: 55%;">
+                <p> Please consider making a donation to the Carnegie Mellon chapter of Engineers Without Borders. Though we receive modest funding for group activities and outreach, we are still in need of your help in funding both of our projects, the potable water supply project for the village of Tingo Pucara, Ecuador and the sustainable energy supply project in the City of Rampur, India. </p>
+                <p> Currently, the women and children of the Tingo Pucara spend upwards of three hours a day traveling to a water source, collecting water, and carrying it back to the village. Our goal is to sustainably, reliably, and safely pump water up a 1000 foot high hill in order to provide 70 liters a day to each of Tingo Pucara's 150 residents. Though we are handling the design and implementation, we cannot fund the entire project.</p>
+                <p> In Rampur, most schools provide education to children of the udnerprivileged section of society, but are under-funded. The government-provided electric power is intermittent and inadepquate to meet the basic demand for lights, fans, or computers. Dark classrooms and hot classrooms are day to day struggles that students and teachers must deal with. We are hoping to make the first trip to Rampur of spring break of this year, but need any help we can get to make that a reality. </p>
+                <p>Here's how you can donate:</p>
+                <hr>
+                <p>
+                    <a href="https://ssl.charityweb.net/ewbusa/?Custom3=100181" target="_blank">Online through EWB-USA</a>. Use your credit card to make a secure donation! </p>
+                <hr>
+                <p>Send a check made out to <b>&lsquo;Engineers Without Borders, Carnegie Mellon&rsquo;</b> through the mail to: </p>
+                <p> Engineers Without Borders<br> Box 56<br> University Center Suite 103<br> Carnegie Mellon University<br> 5000 Forbes Avenue<br> Pittsburgh, PA 15213 </p>
+                <hr>
+                <p> You can even donate for a friend! Give a donation in any amount in another's name and we will send that person a certificate in your name as a holiday gift or acknowledging a special occasion. </p>
+                <p> Another option is to donate your frequent flyer miles to Engineers Without Borders. They will be used for our trip to India this coming year. *Must be a complete flight. </p>
+            </div>
+            <p style="float: right; padding-left: 15px;">
+                <img src="images/school.jpg" alt="Classroom in Rampur" style="float: right;" />
+                <br />
+                <img src="images/ecuador_mini.jpg" alt="Working in Ecuador" style="float: right;" />
+                <img src="images/outside.jpg" alt="School in Rampur" style="float: right;" />
+                <br />
+                <img src="images/watercarry.jpg" alt="Carrying Water in Ecuador" style="float: right" />
+                <br />
+                <img src="images/tejank_flowers.png" alt="Tejank Flowers" style="float: right" />
+            </p>
+            <div class="clear">
+            </div>
+        </div>
+        <div id="newletters">
+        </div>
         <div id="whatsnew">
             <h1 id="whatsnew">What's New</h1>
             <iframe src="http://ewbcmu.tumblr.com/" width="800px" height="720px">
