Fixed board emails.

--- a/index.html
+++ b/index.html
@@ -62,68 +62,97 @@
             <h2>Current Board Members</h2>
             <table id="board">
                 <tr>
+                    <th colspan="3">
+                        <strong>Current Board Members</strong>
+                    </th>
+                </tr>
+                <tr>
                     <td style="text-align:right"> President</td>
-                    <td>Sophie Grodsinsky</td>
-                    <td>s<a href="http://www.google.com/recaptcha/mailhide/d?k=01lKpJKaILpOZrkTkjszngBQ==&amp;c=GcAgJTL7Y9NE1y17aGzZ42x8RlktQO0-RfovKZblbGg=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501lKpJKaILpOZrkTkjszngBQ\75\75\46c\75GcAgJTL7Y9NE1y17aGzZ42x8RlktQO0-RfovKZblbGg\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@andrew.cmu.edu </td>
+                    <td>Craig Boman</td>
+                    <td>
+                        <a href="mailto:president@cmuewb.org">president@cmuewb.org</a>
+                    </td>
                 </tr>
                 <tr>
                     <td style="text-align:right"> Executive Vice President</td>
-                    <td>Tejank Shah</td>
-                    <td>t<a href="http://www.google.com/recaptcha/mailhide/d?k=01lKpJKaILpOZrkTkjszngBQ==&amp;c=VBEa2xVDH540y-1GuT0CzspTT4JT4SJRxehIEmJZg74=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501lKpJKaILpOZrkTkjszngBQ\75\75\46c\75VBEa2xVDH540y-1GuT0CzspTT4JT4SJRxehIEmJZg74\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@andrew.cmu.edu </td>
+                    <td>Stephanie Emore</td>
+                    <td>
+                        <a href="mailto:execvp@cmuewb.org">execvp@cmuewb.org</a>
+                    </td>
                 </tr>
                 <tr>
                     <td style="text-align:right"> Vice President of Finance</td>
-                    <td>Jule Carr</td>
-                    <td>j<a href="http://www.google.com/recaptcha/mailhide/d?k=01lKpJKaILpOZrkTkjszngBQ==&amp;c=a83_PwPeOzRnqvlYCuLSaON-yaR2hnAWzoX61tNegVc=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501lKpJKaILpOZrkTkjszngBQ\75\75\46c\75a83_PwPeOzRnqvlYCuLSaON-yaR2hnAWzoX61tNegVc\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@andrew.cmu.edu </td>
+                    <td>David Sparks</td>
+                    <td>
+                        <a href="mailto:finance@cmuewb.org">finance@cmuewb.org</a>
+                    </td>
                 </tr>
                 <tr>
                     <td style="text-align:right"> Vice President of Projects</td>
-                    <td>Eva Humphrey</td>
-                    <td>e<a href="http://www.google.com/recaptcha/mailhide/d?k=01lKpJKaILpOZrkTkjszngBQ==&amp;c=fquYxgaTaEZ-QHD2fKtdYA==" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501lKpJKaILpOZrkTkjszngBQ\75\75\46c\75fquYxgaTaEZ-QHD2fKtdYA\75\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@cmu.edu </td>
+                    <td>Sara Johnson</td>
+                    <td>
+                        <a href="mailto:projects@cmuewb.org">projects@cmuewb.org</a>
+                    </td>
                 </tr>
                 <tr>
                     <td style="text-align:right"> Vice President of Public Relations</td>
-                    <td>Avesh Singh</td>
-                    <td>a<a href="http://www.google.com/recaptcha/mailhide/d?k=01lKpJKaILpOZrkTkjszngBQ==&amp;c=uua_-2tz175X5JYu9yMmcw==" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501lKpJKaILpOZrkTkjszngBQ\75\75\46c\75uua_-2tz175X5JYu9yMmcw\75\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@cmu.edu </td>
-                </tr>
-                <tr>
-                    <td style="text-align:right"> Editor</td>
-                    <td>Madison Calhoun</td>
-                    <td>m<a href="http://www.google.com/recaptcha/mailhide/d?k=01lKpJKaILpOZrkTkjszngBQ==&amp;c=7PwTNgPf8fz4V0V6R4sf71Mv4LL9DKvPzJzRXeXd80M=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501lKpJKaILpOZrkTkjszngBQ\75\75\46c\0757PwTNgPf8fz4V0V6R4sf71Mv4LL9DKvPzJzRXeXd80M\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@andrew.cmu.edu </td>
+                    <td>Yeshar Hadi</td>
+                    <td>
+                        <a href="mailto:pr@cmuewb.org">pr@cmuewb.org</a>
+                    </td>
                 </tr>
                 <tr>
                     <td style="text-align:right"> Fundraising Chair</td>
-                    <td>Michelle Couste</td>
-                    <td>m<a href="http://www.google.com/recaptcha/mailhide/d?k=01lKpJKaILpOZrkTkjszngBQ==&amp;c=2poJWj4xKVPYTTHbBdTTUcLOu37vMcL9yRucxln05ZY=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501lKpJKaILpOZrkTkjszngBQ\75\75\46c\0752poJWj4xKVPYTTHbBdTTUcLOu37vMcL9yRucxln05ZY\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@andrew.cmu.edu </td>
+                    <td>Tushita Gupta</td>
+                    <td>
+                        <a href="mailto:fundraising@cmuewb.org">fundraising@cmuewb.org</a>
+                    </td>
                 </tr>
                 <tr>
                     <td style="text-align:right"> Grants and Sponsorships Chair</td>
-                    <td>Sabrina Larkin</td>
-                    <td>s<a href="http://www.google.com/recaptcha/mailhide/d?k=01lKpJKaILpOZrkTkjszngBQ==&amp;c=S397tJ1XLzdhhOybT0XIkA23FOMSIBrH_5jVF0jQZUU=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501lKpJKaILpOZrkTkjszngBQ\75\75\46c\75S397tJ1XLzdhhOybT0XIkA23FOMSIBrH_5jVF0jQZUU\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@andrew.cmu.edu </td>
+                    <td>Julia Tucker</td>
+                    <td>
+                        <a href="mailto:sponsorship@cmuewb.org">sponsorship@cmuewb.org</a>
+                    </td>
                 </tr>
                 <tr>
                     <td style="text-align:right"> Treasurer</td>
-                    <td>Kyra Gould</td>
-                    <td>k<a href="http://www.google.com/recaptcha/mailhide/d?k=011x0h13Lnu8T2jRhekGWWXw==&amp;c=vs4BR3fKl-gGJf4MsjevdSVzoaKDvIY8HAR5po-cSj0=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\075011x0h13Lnu8T2jRhekGWWXw\75\75\46c\75vs4BR3fKl-gGJf4MsjevdSVzoaKDvIY8HAR5po-cSj0\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@andrew.cmu.edu </td>
+                    <td>Alex Lucci</td>
+                    <td>
+                        <a href="mailto:treasurer@cmuewb.org">treasurer@cmuewb.org</a>
+                    </td>
                 </tr>
                 <tr>
                     <td style="text-align:right"> Webmaster</td>
                     <td>Oscar Bezi</td>
-                    <td>a<a href="http://www.google.com/recaptcha/mailhide/d?k=01lKpJKaILpOZrkTkjszngBQ==&amp;c=Z7W9gjLksIPSliB2wr8ejg==" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501lKpJKaILpOZrkTkjszngBQ\75\75\46c\75Z7W9gjLksIPSliB2wr8ejg\75\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@cmu.edu </td>
+                    <td>
+                        <a href="mailto:webmaster@cmuewb.org">webmaster@cmuewb.org</a>
+                    </td>
                 </tr>
                 <tr>
                     <td style="text-align:right"> Faculty Advisors</td>
                     <td>Kelvin Gregory</td>
-                    <td>k<a href="http://www.google.com/recaptcha/mailhide/d?k=01lKpJKaILpOZrkTkjszngBQ==&amp;c=72g0MaBYAtwNUetOAPHcrg==" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501lKpJKaILpOZrkTkjszngBQ\75\75\46c\07572g0MaBYAtwNUetOAPHcrg\75\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@cmu.edu </td>
+                    <td>
+                        <a href="mailto:advisor@cmuewb.org">advisor@cmuewb.org</a>
+                    </td>
                 </tr>
                 <tr>
                     <td>
                     </td>
                     <td>Mel Siegel</td>
-                    <td>m<a href="http://www.google.com/recaptcha/mailhide/d?k=01lKpJKaILpOZrkTkjszngBQ==&amp;c=eS0Mi81-jHHWutcXehQonQ==" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501lKpJKaILpOZrkTkjszngBQ\75\75\46c\75eS0Mi81-jHHWutcXehQonQ\75\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@cmu.edu </td>
+                    <td>
+                        <a href="mailto:advisor@cmuewb.org">advisor@cmuewb.org</a>
+                    </td>
                 </tr>
                 <tr>
                     <td>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="3">
+                        <p style="text-align:center">
+                            <i>If you have any questions, comments or would like to <br />get in touch with EWB-CMU please feel free to email</i>
+                            <a href="mailto:president@cmuewb.org" >president@cmuewb.org</a>.</p>
                     </td>
                 </tr>
             </table>
