--- a/index.html
+++ b/index.html
@@ -164,7 +164,23 @@
             </div>
             <div id="projects">
                 <h1>Projects</h1>
-                <p>Under construction!</p>
+                <h2>Coffee Project</h2>
+                <p> The Coffee Project is a research initiative that began last year. After completing an initial analysis of the market and agricultural process, the team made a trip last August to Ecuador to interview coffee growers and gather information. This past semester, the team organized the data and have identified several possible areas to make the growing process more efficient and profitable. One idea the team has investigated- the brewing of “coffee alcohol” using byproducts of the coffee-making process and ingredients locally available to the farmers. The project team plans to continue to research this and several other ideas in the coming months. </p>
+                <h2>PET Thatch</h2>
+                <p> PET Thatch is an ambitious joint effort between our chapter and the Reuse Everything Institute, a local non-profit. The project’s mission is to develop an automated process to construct thatch roofs and other products from recycled plastic bottles. The process will then be transplanted into communities in developing nations, where local entrepreneurs will take over the venture. </p>
+                <p> After a two-week trip to Ecuador where the team constructed a new thatch roof for a national park and collected data on recycling habits, the team has reorganized into four groups: cutting, fusing, decontouring, and roof design. </p>
+                <h3>Cutting</h3>
+                <p> The cutting section of the PET Thatch project aims to create a method to cut off the tops and bottoms of the bottles and then cutting the bottles into strips. The focus is to make this process automated and efficient, while keeping it safe. In the past semester, they have created a prototyping model for a cutting chute, sketched out a plan for strip cutting rollers, and are in the process of testing cutting blades. </p>
+                <h3>Fusing</h3>
+                <p> As part of the PET Thatch project, the fusing section is responsible for connecting the individual plastic strips from the cutting section into longer plastic thatch for the roof design section. The main concerns of the section are to make the fusing process easy to learn, affordable, and effective. Currently, the team is researching alternative methods of fusing and have determined three effective mechanical alternatives to ultrasonic fusing. </p>
+                <h3>Decontouring</h3>
+                <p> Decontouring is the process by which ridges and deformations are removed from surfaces. The decontouring team of the PET Thatch project is currently developing a device to accomplish this task. The team has finalized a design utilizing a heated roller system and plan on constructing this system in the upcoming weeks. </p>
+                <h3>Roof Design</h3>
+                <p> This groups looks at the holistic system by creating ideas in manufacturing and application while identifying what end product will perform best through prototypes and experimentation. In the past few months, the team has created a test frame to build model roofs and prototyped new methods of assembling plastic roof tiles. </p>
+                <h2>Tingo Pucará Development</h2>
+                <p> Since 2008, EWB-CMU, along with EWB members from the University of Pittsburgh and the Pittsburgh Professional chapters, have partnered with the community of Tingo Pucará. This indigenous community in the Ecuadorian Andes highlands wants to boost their quality of life through better access to potable water and sanitation. In 2012, a potable water pumping system was constructed, with tapstands installed at each home. To further improve health and sanitation, the community asked for help constructing latrines (design is shown to left). EWB is finalizing a design and materials list for a single pit ventilated latrine. The latrines will be constructed primarily of concrete and designed to last a minimum of 10 years. Eventually, a latrine will be constructed at each home. The team plans to travel to Ecuador this May. Concurrently, a new tri-chapter effort, hosted by the Pittsburgh Professionals, for a similar water pumping project has begun for the nearby community of Curingue. </p>
+                <h2>Energy in Zimbabwe</h2>
+                <p> Nyadire is a Methodist Mission complex located three hours northeast of Harare, Zimbabwe’s capital. The community is home to about 3000 people and a hospital, orphanage, and a teacher’s college. Electricity is provided by the Zimbabwe Electrical Supply Author. </p>
             </div>
             <div id="donate">
                 <h1>Donate</h1>
