Added Twitter button.

--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
             <li>
                 <a href="#newsletters">Newsletters</a>
             </li>
-            <li>
-                <a href="#whatsnew">What's New</a>
-            </li>
         </ul>
         <div id="content">
             <div id="home">
@@ -50,6 +47,8 @@
                     <input type="submit" value="Log in via WebISO" name="login" />
                 </form>
                 <hr>
+                <a href="https://twitter.com/EWB_CMU" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @EWB_CMU</a>
+                <script>!function(d,s,id){varjs,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script', 'twitter-wjs');</script>
             </div>
             <div id="about">
                 <h1>About Us</h1>
@@ -231,11 +230,6 @@
                         <a href="newsletters/CMU_EWB_2013_Fall_Newsletter.pdf">Fall 2013 Newsletter</a>
                     </li>
                 </ul>
-            </div>
-            <div id="whatsnew">
-                <h1 id="whatsnew">What's New</h1>
-                <iframe src="http://ewbcmu.tumblr.com/" width="800px" height="720px">
-                </iframe>
             </div>
         </div>
         <footer>&copy;2015, Engineers Without Borders, Carnegie Mellon University Student Chapter</footer>
