--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         </ul>
         <div id="content">
             <div id="home">
+                <p class="announcement">First General Body Meeting: Wednesday, September 16, 2015 at
+                8pm, DH 2210.</p>
                 <img src="images/home1.jpg">
                 <img src="images/home3.jpg">
                 <img src="images/home2.jpg">
