Got rid of announcement, left commented in so that its easy to know what to add in the future.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </ul>
         <div id="content">
             <div id="home">
-                <p class="announcement">Dues Party: Wednesday, September 23, 2015 at
-                8pm, DH 2210.</p>
+                <!-- <p class="announcement">Dues Party: Wednesday, September 23, 2015 at -->
+                <!-- 8pm, DH 2210.</p> -->
                 <img src="images/home1.jpg">
                 <img src="images/home3.jpg">
                 <img src="images/home2.jpg">
