--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         </ul>
         <div id="content">
             <div id="home">
-                <!-- <p class="announcement">Dues Party: Wednesday, September 23, 2015 at -->
-                <!-- 8pm, DH 2210.</p> -->
+                <!-- <p class="announcement">Dues Party: Wednesday, September 23, 2015 at --1> 8pm, DH 2210.</p> --1> -->
                 <img src="images/home1.jpg">
                 <img src="images/home3.jpg">
                 <img src="images/home2.jpg">
@@ -165,6 +164,9 @@
             </div>
             <div id="projects">
                 <h1>Projects</h1>
+                <h2>Energy in Zimbabwe</h2>
+                <p>The team plans to carry out an alternatives analysis during the fall 2015 semester to identify the most cost-effective and sustainable alternative energy source to power the street lights (current options are solar, hydropower, biogas, and grid-charged batteries). Then, design work will be done in the spring 2016 semester, with the goal of traveling for implementation in August or December 2016.</p>
+                <p> Nyadire is a Methodist Mission complex located three hours northeast of Harare, Zimbabwe’s capital. The community is home to about 3000 people and a hospital, orphanage, and a teacher’s college. Electricity is provided by the Zimbabwe Electrical Supply Author. </p>
                 <h2>Coffee Project</h2>
                 <p> The Coffee Project is a research initiative that began last year. After completing an initial analysis of the market and agricultural process, the team made a trip last August to Ecuador to interview coffee growers and gather information. This past semester, the team organized the data and have identified several possible areas to make the growing process more efficient and profitable. One idea the team has investigated- the brewing of “coffee alcohol” using byproducts of the coffee-making process and ingredients locally available to the farmers. The project team plans to continue to research this and several other ideas in the coming months. </p>
                 <h2>PET Thatch</h2>
@@ -180,8 +182,6 @@
                 <p> This groups looks at the holistic system by creating ideas in manufacturing and application while identifying what end product will perform best through prototypes and experimentation. In the past few months, the team has created a test frame to build model roofs and prototyped new methods of assembling plastic roof tiles. </p>
                 <h2>Tingo Pucará Development</h2>
                 <p> Since 2008, EWB-CMU, along with EWB members from the University of Pittsburgh and the Pittsburgh Professional chapters, have partnered with the community of Tingo Pucará. This indigenous community in the Ecuadorian Andes highlands wants to boost their quality of life through better access to potable water and sanitation. In 2012, a potable water pumping system was constructed, with tapstands installed at each home. To further improve health and sanitation, the community asked for help constructing latrines (design is shown to left). EWB is finalizing a design and materials list for a single pit ventilated latrine. The latrines will be constructed primarily of concrete and designed to last a minimum of 10 years. Eventually, a latrine will be constructed at each home. The team plans to travel to Ecuador this May. Concurrently, a new tri-chapter effort, hosted by the Pittsburgh Professionals, for a similar water pumping project has begun for the nearby community of Curingue. </p>
-                <h2>Energy in Zimbabwe</h2>
-                <p> Nyadire is a Methodist Mission complex located three hours northeast of Harare, Zimbabwe’s capital. The community is home to about 3000 people and a hospital, orphanage, and a teacher’s college. Electricity is provided by the Zimbabwe Electrical Supply Author. </p>
             </div>
             <div id="donate">
                 <h1>Donate</h1>
