Added blurb about Xerox and Gala.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
         <div id="content">
             <div id="home">
-                <!-- <p class="announcement">Dues Party: Wednesday, September 23, 2015 at --1> 8pm, DH 2210.</p> --1> -->
+                <p class="announcement">EWB Annual Gala is on the 15th of November, at 6pm.  <a href="https://drive.google.com/a/andrew.cmu.edu/file/d/0B9QDtHkpCXISZm4wYndNaUcyRE0/view">Find out more and RSVP here.</a></p>
                 <img src="images/home1.jpg">
                 <img src="images/home3.jpg">
                 <img src="images/home2.jpg">
@@ -183,6 +183,7 @@
                 <h2>Tingo Pucará Development</h2>
                 <p> Since 2008, EWB-CMU, along with EWB members from the University of Pittsburgh and the Pittsburgh Professional chapters, have partnered with the community of Tingo Pucará. This indigenous community in the Ecuadorian Andes highlands wants to boost their quality of life through better access to potable water and sanitation. In 2012, a potable water pumping system was constructed, with tapstands installed at each home. To further improve health and sanitation, the community asked for help constructing latrines (design is shown to left). EWB is finalizing a design and materials list for a single pit ventilated latrine. The latrines will be constructed primarily of concrete and designed to last a minimum of 10 years. Eventually, a latrine will be constructed at each home. The team plans to travel to Ecuador this May. Concurrently, a new tri-chapter effort, hosted by the Pittsburgh Professionals, for a similar water pumping project has begun for the nearby community of Curingue. </p>
             </div>
+
             <div id="donate">
                 <h1>Donate</h1>
                 <div style="float: left; width: 55%;">
@@ -199,6 +200,8 @@
                     <hr>
                     <p> You can even donate for a friend! Give a donation in any amount in another's name and we will send that person a certificate in your name as a holiday gift or acknowledging a special occasion. </p>
                     <p> Another option is to donate your frequent flyer miles to Engineers Without Borders. They will be used for our trip to India this coming year. *Must be a complete flight. </p>
+                    <p>Thank you Xerox for the $6,000 you donated to our project
+                        in Zimbabwe!</p>
                 </div>
                 <p style="float: right; padding-left: 15px;">
                     <img src="images/school.jpg" alt="Classroom in Rampur" style="float: right;" />
@@ -213,6 +216,7 @@
                 <div class="clear">
                 </div>
             </div>
+
             <div id="newsletters">
                 <h1>Newsletters</h1>
                 <ul>
