Update gala text.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
         </ul>
         <div id="content">
             <div id="home">
-                <p class="announcement">EWB Annual Gala is on the 15th of November, at 6pm.  <a href="https://drive.google.com/a/andrew.cmu.edu/file/d/0B9QDtHkpCXISZm4wYndNaUcyRE0/view">Find out more and RSVP here.</a></p>
+                <p class="announcement">
+                    The Carnegie Mellon University Chapter of Engineers Without Borders will host its Annual Gala onNovember 15th in the Singleton Room of Roberts Engineering Hall at CMU. The evening will begin at6:00 PM with a reception featuring the work of each Engineers Without Borders program. Proceeds will help fund our ongoing international and Pittsburgh-based initiatives.<br />
+                    Please RSVP by emailing <a>ewb.cmu.fundraising@gmail.com<a/><br />
+                    Tickets are $45 for professionals and $20 for students. They can be paid for in cash at the door.<br />
+                    We thank you for your support!
+                </p>
                 <img src="images/home1.jpg">
                 <img src="images/home3.jpg">
                 <img src="images/home2.jpg">
