--- a/index.html
+++ b/index.html
@@ -33,9 +33,16 @@
             <div id="home">
                 <p class="announcement">Anuual Gala on November 15th!
                 </p>
-                    The Carnegie Mellon University Chapter of Engineers Without Borders will host its Annual Gala on November 15th in the Singleton Room of Roberts Engineering Hall at CMU. The evening will begin at 6:00 PM with a reception featuring the work of each Engineers Without Borders program. Proceeds will help fund our ongoing international and Pittsburgh-based initiatives.<br />
-                    Please RSVP by emailing <a>ewb.cmu.fundraising@gmail.com<a/><br />
-                    Tickets are $45 for professionals and $20 for students. They can be paid for in cash at the door.<br />
+                    The Carnegie Mellon University Chapter of Engineers Without Borders will host its Annual Gala on November 15th in the Singleton Room of Roberts Engineering Hall at CMU. 
+                </p>
+                <p>
+                    The evening will begin at 6:00 PM with a reception featuring the work of each Engineers Without Borders program. Proceeds will help fund our ongoing international and Pittsburgh-based initiatives.<br />
+                    Please RSVP by emailing <a>ewb.cmu.fundraising@gmail.com<a/>.
+                </p>
+                <p>
+                    Tickets are $45 for professionals and $20 for students. They can be paid for in cash at the door.
+                </p>
+                <p>
                     We thank you for your support!
                 </p>
                 <img src="images/home1.jpg">
