--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </p>
                 <hr />
                 <p>                    
-                    Please RSVP by emailing <a>ewb.cmu.fundraising@gmail.com<a/>.
+                    Please RSVP by emailing <a>ewb.cmu.fundraising@gmail.com</a>.
                 </p>
                 <hr />
                 <p>
