--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
             <div id="home">
                 <p class="announcement">Anuual Gala on November 15th!
                 </p>
-                    The Carnegie Mellon University Chapter of Engineers Without Borders will host its Annual Gala on November 15th in the Singleton Room of Roberts Engineering Hall at CMU. 
+                    The Carnegie Mellon University Chapter of Engineers Without Borders will host its Annual Gala on November 15th in the Singleton Room of Roberts Engineering Hall at CMU.
                 </p>
                 <hr />
                 <p>
                     The evening will begin at 6:00 PM with a reception featuring the work of each Engineers Without Borders program. Proceeds will help fund our ongoing international and Pittsburgh-based initiatives.<br />
                 </p>
                 <hr />
-                <p>                    
+                <p>
                     Please RSVP by emailing <a>ewb.cmu.fundraising@gmail.com</a>.
                 </p>
                 <hr />
@@ -87,72 +87,72 @@
                     </tr>
                     <tr>
                         <td style="text-align:right"> President</td>
-                        <td>Craig Boman</td>
+                        <td>Sara Johnson</td>
                         <td>
-                            <a href="mailto:president@cmuewb.org">president@cmuewb.org</a>
+                            snj AT andrew
                         </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Executive Vice President</td>
-                        <td>Stephanie Emore</td>
+                        <td>Julia Tucker</td>
                         <td>
-                            <a href="mailto:execvp@cmuewb.org">execvp@cmuewb.org</a>
+                            jltucker AT andrew
                         </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Vice President of Finance</td>
-                        <td>David Sparks</td>
+                        <td>Roshan Sajjad</td>
                         <td>
-                            <a href="mailto:finance@cmuewb.org">finance@cmuewb.org</a>
+                            rsajjad AT andrew
                         </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Vice President of Projects</td>
-                        <td>Sara Johnson</td>
+                        <td>Cindy Weng</td>
                         <td>
-                            <a href="mailto:projects@cmuewb.org">projects@cmuewb.org</a>
+                            cweng1 AT andrew
                         </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Vice President of Public Relations</td>
-                        <td>Yeshar Hadi</td>
+                        <td>Tushita Gupta</td>
                         <td>
-                            <a href="mailto:pr@cmuewb.org">pr@cmuewb.org</a>
+                            tushitag AT andrew
                         </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Fundraising Chair</td>
-                        <td>Tushita Gupta</td>
+                        <td>Emily Carvalho</td>
                         <td>
-                            <a href="mailto:fundraising@cmuewb.org">fundraising@cmuewb.org</a>
+                            emcarval AT andrew
                         </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Grants and Sponsorships Chair</td>
-                        <td>Julia Tucker</td>
+                        <td>Sidharth Verma</td>
                         <td>
-                            <a href="mailto:sponsorship@cmuewb.org">sponsorship@cmuewb.org</a>
+                            sidhartv AT andrew
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align:right"> Treasurer</td>
-                        <td>Alex Lucci</td>
+                        <td style="text-align:right"> Secretary</td>
+                        <td>Charlotte Deiss</td>
                         <td>
-                            <a href="mailto:treasurer@cmuewb.org">treasurer@cmuewb.org</a>
+                            cdeiss AT andrew
                         </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Webmaster</td>
-                        <td>Oscar Bezi</td>
+                        <td>Sidharth Verma</td>
                         <td>
-                            <a href="mailto:webmaster@cmuewb.org">webmaster@cmuewb.org</a>
+                            sidhartv AT andrew
                         </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Faculty Advisors</td>
                         <td>Kelvin Gregory</td>
                         <td>
-                            <a href="mailto:advisor@cmuewb.org">advisor@cmuewb.org</a>
+                            kelvin AT cmu
                         </td>
                     </tr>
                     <tr>
@@ -160,7 +160,7 @@
                         </td>
                         <td>Mel Siegel</td>
                         <td>
-                            <a href="mailto:advisor@cmuewb.org">advisor@cmuewb.org</a>
+                            mws AT cmu
                         </td>
                     </tr>
                     <tr>
